tests/typing/fail/inherit_module_class_method_fail.rb
class Module  
  def foo() end
end

"hi".foo
